projects/compiler/test/typechecker/try/error_else_return_type_mismatch.4.abra
func some(): Result<Int, Int> = Ok(123)

func f1(): Int? {
  val x = try some() else return some()

  Some(x + 1)
}